--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=e35d6ce9278dea3ba8b4ae81649e6be6
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL="postgresql://super_admin:1234@127.0.0.1:5432/shop?serverVersion=10&charset=utf8"
 ###< doctrine/doctrine-bundle ###
