--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ APP_SECRET=e35d6ce9278dea3ba8b4ae81649e6be6
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://edc5550a8633f0:dc8725c828f9bb@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
